# Aegis-C2

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  RELEASE_PROCESS.md  SECURITY.md  aegis-c2.sln  arasinav_raporu.md  docker-compose.yml  generate_keys.py  init.sql  pytest.ini  start_k8s.sh  stop_k8s.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Aegis_API/: Aegis_API.csproj  Aegis_API.http  Dockerfile  Program.cs  appsettings.json
Aegis_API/Commands/: MissionCommands.cs  TacticalCommands.cs
Aegis_API/Controllers/: AuthController.cs  DeploymentController.cs  EventsController.cs  TacticalController.cs
Aegis_API/Hubs/: TelemetryHub.cs
Aegis_API/Models/: OperationalEvent.cs
Aegis_API/Properties/: launchSettings.json
Aegis_API/Services/: GlobalMetricsService.cs  KubernetesOrchestratorService.cs  OperationalEventService.cs  RedisKeyScanner.cs  (+2 more)
GKS_Server/: Dockerfile  config.py  crypto_manager.py  repository.py  server.py
UAV_Client/: CMakeLists.txt  Dockerfile  client.c  client.cpp
UAV_Client/include/: Constants.hpp  CryptoEngine.hpp  Logger.hpp  Packets.hpp  TelemetrySensor.hpp  UdpTransceiver.hpp
UAV_Client/src/: CryptoEngine.cpp  TelemetrySensor.cpp  UdpTransceiver.cpp  main.cpp
aegis-ui/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.js
keys/: README.md
nginx/: nginx.conf
(+55 files in other folders)
